recursion.hanoi.InterleavedHanoi.scala.error
Erreur de compilation :
InterleavedHanoi:23: error: not found: value sr2
    interleavedHanoi(height-1, other, src1, sr2, dst)
                                            ^